crates/plotnik-lib/tests/02-parser/recovery_unclosed/missing_paren.txt
(identifier
==== diagnostics ====
error: missing closing `)`
 --> query.ptk:1:1
  |
1 | (identifier
  | -^^^^^^^^^^
  | |
  | node started here
  |
help: add `)` to close the node
